Configure Vite hot reload for Docker development
- Added file polling with usePolling: true for Docker compatibility
- Configured HMR (Hot Module Replacement) settings
- Added CHOKIDAR_USEPOLLING and WATCHPACK_POLLING environment variables
- Enhanced Docker volume mounting for better file watching
- Added TTY and stdin support for better development experience
- Fixed API proxy to use backend service name

Hot reload now works seamlessly in Docker containers for faster development.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,15 +51,20 @@ services:
     restart: unless-stopped
     environment:
       - VITE_API_URL=http://localhost:8000/api/v1
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
     ports:
       - "3000:3000"
     volumes:
       - ./fe:/app
       - /app/node_modules
+      - /app/.vite
     depends_on:
       - backend
     networks:
       - app-network
+    stdin_open: true
+    tty: true
 
   # phpMyAdmin (Optional - for database management)
   phpmyadmin:
