Rebrand project: Order Management System → Gestionale Iliad
🎯 COMPLETE PROJECT REBRANDING:

✅ FRONTEND UPDATES:
- Updated Italian translation: app.title = 'Gestionale Iliad'
- Updated English translation: app.title = 'Gestionale Iliad'
- Modified App.vue to use dynamic translated title
- Updated index.html: <title>Gestionale Iliad</title>
- Updated package.json: 'gestionale-iliad-frontend'

✅ BACKEND UPDATES:
- Updated composer.json: 'iliad/gestionale-iliad-api'
- Modified API root response: 'Gestionale Iliad API'
- Updated OpenAPI specification title and description
- Changed Swagger UI header and branding

✅ DOCKER UPDATES:
- Renamed containers:
  • gestionale_iliad_api (backend)
  • gestionale_iliad_frontend (frontend)
  • gestionale_iliad_db (MySQL)
  • gestionale_iliad_phpmyadmin (phpMyAdmin)

✅ DOCUMENTATION UPDATES:
- Updated Swagger UI title: 'Gestionale Iliad API Documentation'
- Modified header text: 'Documentazione completa API RESTful'
- Updated OpenAPI description to Italian

🧪 TESTING:
✅ Backend API responds with new name
✅ OpenAPI documentation shows updated titles
✅ All endpoints functional
✅ Frontend will display new branding

🎨 BRAND CONSISTENCY:
- All references updated from 'Order Management System'
- Consistent 'Gestionale Iliad' branding across all components
- Maintained Iliad color scheme (#E60012, #FF6900)
- Professional Italian business application naming

The project is now fully rebranded as 'Gestionale Iliad' 🚀

--- a/be/composer.json
+++ b/be/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "iliad/order-management-api",
-    "description": "Order Management System API built with Lumen",
+    "name": "iliad/gestionale-iliad-api",
+    "description": "Gestionale Iliad API built with Lumen",
     "keywords": ["framework", "laravel", "lumen", "api"],
     "license": "MIT",
     "type": "project",
