--- a/fe/package.json
+++ b/fe/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "echo 'Linting not configured - ESLint removed for optimization'"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -20,8 +20,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.22.0",
     "vite": "^4.5.0"
   }
 }
