--- a/be/composer.json
+++ b/be/composer.json
@@ -10,6 +10,9 @@
         "illuminate/database": "^9.0",
         "fruitcake/laravel-cors": "^3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -19,7 +22,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/phpunit/"
         }
     },
     "config": {
