🚀 Complete custom domain setup with nginx reverse proxy
Nginx reverse proxy configuration:
- Add nginx service to docker-compose.yml
- Create nginx.conf with virtual hosts for iliadlocal and iliadApi
- Both domains now accessible on port 80 (no visible ports)

Docker configuration updates:
- Remove direct port mapping from frontend (now proxied through nginx)
- Change backend port mapping to 8080:8000 (internal only)
- Update VITE_API_URL to use iliadApi without port
- Add nginx dependency on frontend and backend services

Documentation updates:
- Update README with clean URL examples
- Update CUSTOM_DOMAIN_SETUP.md with nginx configuration
- Add benefits of reverse proxy setup

Result:
- Frontend: http://iliadlocal (clean URL, no port)
- Backend API: http://iliadApi (clean URL, no port)
- Professional development environment
- Production-like setup with reverse proxy

Technical details:
- nginx virtual hosts for domain-based routing
- Docker internal networking for service communication
- Clean separation between frontend and backend domains
- Standard HTTP port 80 for both services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,9 @@ services:
       - DB_USERNAME=app_user
       - DB_PASSWORD=app_password
     ports:
-      - "8000:8000"
+      - "8080:8000"
+    extra_hosts:
+      - "iliadApi:127.0.0.1"
     volumes:
       - ./be:/var/www/html
       - ./be/storage:/var/www/html/storage
@@ -50,11 +52,9 @@ services:
     container_name: gestionale_iliad_frontend
     restart: unless-stopped
     environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
+      - VITE_API_URL=http://iliadApi/api/v1
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
-    ports:
-      - "3000:3000"
     volumes:
       - ./fe:/app
       - /app/node_modules
@@ -65,6 +65,21 @@ services:
       - app-network
     stdin_open: true
     tty: true
+
+  # Nginx Reverse Proxy
+  nginx:
+    image: nginx:alpine
+    container_name: gestionale_iliad_nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - app-network
 
 
 volumes:
