🔧 Configure Prettier to prevent infinite loops with HMR
Problem:
- Prettier was causing infinite loops with hot reload
- File formatting triggered HMR which caused more formatting
- System was unstable with continuous auto-refresh

Solution:
- Created .prettierrc.js with conservative configuration
- Updated .prettierignore to exclude files that cause loops
- Modified vite.config.js to disable polling and ignore more patterns
- Updated pre-commit hook to use .prettierignore
- Formatted LanguageSwitcher.vue to pass checks

Configuration changes:
- Prettier: printWidth 100, trailingComma none for JS
- Vite: usePolling false, comprehensive ignored patterns
- Prettierignore: excludes config files, cache, build dirs
- Pre-commit: uses --ignore-path .prettierignore

Result:
- Prettier check still active but more stable
- Hot reload works without infinite loops
- File watching optimized to ignore problematic files
- System stable for development

Files modified:
- fe/.prettierrc.js (new conservative config)
- fe/.prettierignore (expanded exclusions)
- fe/vite.config.js (disabled polling, added ignored patterns)
- .git/hooks/pre-commit-frontend (uses prettierignore)
- fe/src/components/LanguageSwitcher.vue (formatted)

Test:
- ✅ Hot reload stable without loops
- ✅ Prettier check works on commit
- ✅ File watching optimized
- ✅ Development environment stable

--- a/fe/.prettierignore
+++ b/fe/.prettierignore
@@ -50,3 +50,23 @@ package.json
 .eslintrc*
 .prettierignore
 .eslintignore
+
+# Files that change frequently and could cause loops
+**/node_modules/**
+**/.vite/**
+**/dist/**
+**/coverage/**
+**/.cache/**
+**/.temp/**
+**/.tmp/**
+**/*.log
+**/.DS_Store
+
+# IDE files
+.vscode/**
+.idea/**
+
+# Lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
