--- a/fe/package.json
+++ b/fe/package.json
@@ -21,10 +21,13 @@
     "vuetify": "^3.4.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-vue": "^4.5.0",
-    "vite": "^4.5.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^9.22.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "vite": "^4.5.0"
   }
 }
